--- a/client/src/components/homepage/home.scss
+++ b/client/src/components/homepage/home.scss
@@ -1,10 +1,7 @@
-// .homepage {
-//   background-color: red;
-//   height: 100vh;
-//   width:100vh;
-//   .test{
-//     background-color: red;
-//     height: 100vh;
-//     width:100vh;
-//   }
-// }
+.homepage {
+  .irrelavant{
+    background-color: red;
+    height: 10px;
+    position:relative;
+  }
+}
