--- a/client/src/components/homepage/home.scss
+++ b/client/src/components/homepage/home.scss
@@ -24,7 +24,38 @@
         padding-right: 50px;
         display:flex;
         flex-direction: column;
-        justify-content: center;
+        align-items:center;
+
+        h2 {
+          font-size:35px;
+          margin-bottom: 10px;
+        }
+        h3{
+          margin-left: 30px;
+          margin-right: 30px;
+          font-size: 20px;
+          margin-bottom: 40px;
+          font-weight: 500;
+        }
+
+        button{
+          width:200px;
+          height:50px;
+          color:white;
+          border:none;
+          border-radius: 10px;
+          font-weight:500;
+          font-size: 20px;
+          cursor:pointer;
+          background-color: crimson;
+          &:focus{ //when click, there will be outline, this will prevent it
+            outline:none;
+          }
+        }
+
+        .link{
+          visibility: hidden;
+        }
       }
     }
 
