--- a/client/src/components/homepage/home.scss
+++ b/client/src/components/homepage/home.scss
@@ -72,6 +72,7 @@
         align-items: center;
         justify-content: center;
         float:center;
+        overflow: hidden;
       }
 
     }
