--- a/client/src/components/homepage/home.scss
+++ b/client/src/components/homepage/home.scss
@@ -4,7 +4,7 @@
   .container{
     width: 100%;
     height: calc(100vh - 70px);
-    background-color:rgb(241, 217, 217);
+    background-color:rgb(243, 235, 209);
     position:relative;
     top:70px;
     display: flex;
@@ -27,12 +27,13 @@
         align-items:center;
 
         h2 {
-          font-size:35px;
+          font-size:40px;
           margin-bottom: 10px;
+          color:#001D3D;
         }
         h3{
-          margin-left: 30px;
-          margin-right: 30px;
+          margin-left: 150px;
+          margin-right: 100px;
           font-size: 20px;
           margin-bottom: 40px;
           font-weight: 500;
@@ -47,7 +48,7 @@
           font-weight:500;
           font-size: 20px;
           cursor:pointer;
-          background-color: crimson;
+          background-color: #FAA307;
           &:focus{ //when click, there will be outline, this will prevent it
             outline:none;
           }
@@ -64,8 +65,8 @@
       overflow:hidden;
 
       .imgContainer{
-        width:500px;
-        height:300px;
+        width:650px;
+        height:400px;
         background-color: white;
         border-radius:5%;
         display:flex;
